crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__move_group_attrs_to_elems__move_group_attrs_to_elems.snap
---
source: crates/oxvg_optimiser/src/jobs/move_group_attrs_to_elems.rs
expression: "test_config(r#\"{ \"moveGroupAttrsToElems\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- append transform to children of `g` -->\n    <g transform=\"scale(2)\">\n        <path transform=\"rotate(45)\" d=\"M0,0 L10,20\"/>\n        <path transform=\"translate(10, 20)\" d=\"M0,10 L20,30\"/>\n    </g>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- append transform to children of `g` -->
    <g>
        <path transform="scale(2) rotate(45)" d="M0,0 L10,20"></path>
        <path transform="scale(2) translate(10, 20)" d="M0,10 L20,30"></path>
    </g>
</svg>
